--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,10 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/now-alt" type="text/css"/> 
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 		<style>
